--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "license": "MIT",
   "devDependencies": {
     "gulp": "^3.9.1",
+    "gulp-cssnano": "^2.1.2",
     "gulp-if": "^2.0.2",
     "gulp-inject": "^4.2.0",
     "gulp-rename": "^1.2.2"
