--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "gulp-cssnano": "^2.1.2",
     "gulp-if": "^2.0.2",
     "gulp-inject": "^4.2.0",
-    "gulp-rename": "^1.2.2"
+    "gulp-rename": "^1.2.2",
+    "gulp-sass": "^3.1.0"
   },
   "dependencies": {}
 }
